# MatrixFilter

./: .gitignore  CMakeLists.txt  CMakePresets.json  MatrixFilter.sln  README.md
CommonFilter/: CommonFilter.cpp  CommonFilter.h  CommonFilter.vcxproj  CommonFilter.vcxproj.filters  commonfilter_global.h  stdafx.h
CommonFilter/Config/: Configuration.cpp  Configuration.h  Parameter.cpp  Parameter.h  ValueVisitor.cpp  Visitor.cpp
CommonFilter/Logger/: LogAdapter.h  Logger.cpp  Logger.h  MethodTimer.cpp
CommonFilter/Matrix/: FileManager.cpp  FileManager.h  FilterManager.cpp  FilterManager.h  MatrixFile.cpp  MatrixFile.h  MatrixManager.cpp  MatrixManager.h
CommonFilter/Serialize/: JsonReader.cpp  JsonReader.h  JsonStream.cpp  JsonStream.h  JsonWriter.cpp  JsonWriter.h
FilterConsole/: Context.ixx  FilterConsole.vcxproj  FilterConsole.vcxproj.filters  main.cpp
FilterDialog/: FilterDialog.cpp  FilterDialog.h  FilterDialog.rc  FilterDialog.ui  FilterDialog.vcxproj  FilterDialog.vcxproj.filters  main.cpp  stdafx.h
FilterDialog/Application/: Application.cpp  Application.h  ApplicationConfig.cpp  ApplicationConfig.h  DataLayer.cpp  DataLayer.h  XProgressBar.cpp  XProgressBar.h  XSpinBox.cpp  XSpinBox.h  XTreeView.h
FilterDialog/Basic/: ProgressBar.cpp  ProgressBar.h  TLatin1String.h  XLatin1String.h  XTreeView.cpp  XTreeView.h
FilterDialog/Dialog/: FilterDialog.cpp  FilterDialog.h  FilterDialog.ui
source/common/: CMakeLists.txt
source/common/config/: Configuration.cpp  Configuration.h  Parameter.cpp  Parameter.h  Visitor.cpp
source/common/config/Parameter/: BaseParameter.cpp  BaseParameter.h  BinaryParameter.cpp  BinaryParameter.h  BooleanParameter.cpp  BooleanParameter.h  DoubleParameter.cpp  DoubleParameter.h  IntegerParameter.cpp  IntegerParameter.h  ListParameter.cpp  ListParameter.h  StringParameter.cpp  StringParameter.h
source/common/logger/: BufferedQueue.h  Logger.cpp  Logger.h
source/common/matrix/: FileManager.cpp  ImageMatrix.cpp  ImageMatrix.h  MatrixFile.cpp  MatrixFile.h  MatrixImage.cpp
source/common/utils/: JsonReader.cpp  JsonReader.h  JsonStream.cpp  JsonWriter.cpp  JsonWriter.h
source/console/: main.cpp
(+67 files in other folders)
